# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: admin.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: index.html  layout.html  login.html
task_manager/templates/common/: delete.html
task_manager/templates/labels/: create.html  delete.html  list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  details.html  list.html  update.html
task_manager/templates/users/: create.html  delete.html  list.html  update.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
