[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet task manager"
authors = ["ao <noreply@github.com>"]
readme = "README.md"
packages = [
    { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"
django = "4.2.7"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
django-bootstrap5 = "^23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
