[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet task manager"
authors = ["ao <noreply@github.com>"]
readme = "README.md"
packages = [
    { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.7"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
django-bootstrap5 = "^23.4"
django-filter = "^23.5"
rollbar = "^0.16.3"


[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
